En productos de las mascotas expandi mas el contenedor que tiene el titulo de la pagina

--- a/system_huellitas/views/public/productos_perros_comida.html
+++ b/system_huellitas/views/public/productos_perros_comida.html
@@ -20,15 +20,10 @@
     <header>
         <!-- Barra de navegación -->
         <nav id="navbar"></nav>
-    </header>
-
-    <!-- Contenido principal -->
-    <main class="mt-5 p-5">
         <!-- Contenedor para la sección de productos de perros -->
-        <div class="container-fluid bg-orange-cream-color text-white">
-            <br>
+        <div class="container-fluid bg-orange-cream-color text-white mt-5 p-3">
             <!-- Encabezado de la sección -->
-            <div class="row">
+            <div class="row mt-5 ms-5 mb-3">
                 <!-- Columna para la imagen del encabezado -->
                 <div class="col-1 px-5 text-end">
                     <img src="../../resources/img/png/dog_products.png" width="90px">
@@ -40,9 +35,11 @@
                     </h1>
                 </div>
             </div>
-            <br>
         </div>
-        <br>
+    </header>
+
+    <!-- Contenido principal -->
+    <main class="mt-0 p-5">
         <!-- Fila para el filtro de marcas -->
         <div class="row">
             <!-- Columna para el filtro de marcas -->
@@ -116,11 +113,11 @@
                                 <!-- Fila para el precio y las calificaciones -->
                                 <div class="row">
                                     <!-- Columna para el precio -->
-                                    <div class="col-7">
+                                    <div class="col-6">
                                         <h5 class="card-title fw-bold">$50</h5>
                                     </div>
                                     <!-- Columna para las calificaciones -->
-                                    <div class="col-5">
+                                    <div class="col-6">
                                         <!-- Imágenes de las calificaciones -->
                                         <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                         <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -163,10 +160,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$50</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -200,10 +197,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -237,10 +234,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -249,7 +246,7 @@
                                 </div>
                             </div>
                             <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <p class="fw-bold">Bolsa Pedigree - Perro mayor</p>
                             <div class="row">
                                 <div class="col-9">
                                     <div class="text-start">
@@ -274,10 +271,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -286,7 +283,7 @@
                                 </div>
                             </div>
                             <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <p class="fw-bold">Bolsa Pedigree - Perro mayor</p>
                             <div class="row">
                                 <div class="col-9">
                                     <div class="text-start">
