--- a/system_huellitas/views/public/terminos_condiciones.html
+++ b/system_huellitas/views/public/terminos_condiciones.html
@@ -32,7 +32,7 @@
         <!--De aquí para abajo solo son terminos y condiciones, se ajusta el texto cuando hay subtitulos y se pone justificado y etc.-->
         <div class="mt-3 p-5">
             <div class="container text-center">
-                <p class="text-justify">
+                <p class="text">
                     El objeto de las presentes Condiciones Generales de Uso (en adelante, Condiciones) es regular el
                     acceso y la utilización del Sitio Web. A los efectos de las presentes Condiciones se entenderá como
                     Sitio Web: la apariencia externa de los interfaces de pantalla, tanto de forma estática como de
@@ -56,7 +56,7 @@
                 <h3>
                     EL USUARIO
                 </h3>
-                <p class="text-justify">
+                <p class="text">
                     El acceso, la navegación y uso del Sitio Web, así como por los espacios habilitados para interactuar
                     entre los Usuarios, y el Usuario y Huellitas pets, como los comentarios y/o espacios de blogging,
                     confiere la condición de Usuario, por lo que se aceptan, desde que se inicia la navegación por el
@@ -69,7 +69,7 @@
                     se extenderá a:
                 <ol>
                     <ul>
-                        <p>
+                        <p class="text">
                             • Un uso de la información, Contenidos y/o Servicios y datos ofrecidos por Huellitas pets
                             sin que
                             sea contrario a lo dispuesto por las presentes Condiciones, la Ley, la moral o el orden
@@ -79,7 +79,7 @@
                         </p>
                     </ul>
                     <ul>
-                        <p>
+                        <p class="text">
                             • La veracidad y licitud de las informaciones aportadas por el Usuario en los formularios
                             extendidos
                             por Huellitas pets para el acceso a ciertos Contenidos o Servicios ofrecidos por el Sitio
@@ -95,7 +95,7 @@
                     </ul>
                 </ol>
                 </p>
-                <p>
+                <p class="text">
                     En cualquier caso, Huellitas pets no será responsable de las opiniones vertidas por los Usuarios a
                     través de comentarios u otras herramientas de blogging o de participación que pueda haber.
                     El mero acceso a este Sitio Web no supone entablar ningún tipo de relación de carácter comercial
@@ -108,7 +108,7 @@
                 <h3>
                     ACCESO Y NAVEGACIÓN EN EL SITIO WEB: EXCLUSIÓN DE GARANTÍAS Y RESPONSABILIDAD
                 </h3>
-                <p>
+                <p class="text">
                     Huellitas pets no garantiza la continuidad, disponibilidad y utilidad del Sitio Web, ni de los
                     Contenidos o Servicios. Huellitas pets hará todo lo posible por el buen funcionamiento del Sitio
                     Web,
@@ -131,7 +131,7 @@
                 <h3>
                     POLÍTICA DE ENLACES
                 </h3>
-                <p>
+                <p class="text">
                     Se informa que el Sitio Web de Huellitas pets pone o puede poner a disposición de los Usuarios
                     medios de
                     enlace (como, entre otros, links, banners, botones), directorios y motores de búsqueda que permiten
@@ -185,7 +185,7 @@
                 <h3>
                     PROPIEDAD INTELECTUAL E INDUSTRIAL
                 </h3>
-                <p>
+                <p class="text">
                     Huellitas pets por sí o como parte cesionaria, es titular de todos los derechos de propiedad
                     intelectual
                     e industrial del Sitio Web, así como de los elementos contenidos en el mismo (a título enunciativo y
@@ -224,7 +224,7 @@
                 <h3>
                     ACCIONES LEGALES, LEGISLACIÓN APLICABLE Y JURISDICCIÓN
                 </h3>
-                <p>
+                <p class="text">
                     Huellitas pets se reserva la facultad de presentar las acciones civiles o penales que considere
                     necesarias por la utilización indebida del Sitio Web y Contenidos, o por el incumplimiento de las
                     presentes Condiciones.
