--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <!--Aqui ira el contenido de la imagen y la info del producto-->
-                <div class="col-12 align-items-center">
+                <div class="col-12 align-items-center mt-5">
                     <div class="row">
                         <div class="col-sm-12 col-md-12 col-lg-3 px-2 align-items-center mb-6">
                             <img class="perro image-fluid rounded-3" src="../../resources/img/png/product1.png" alt="">
@@ -52,37 +52,38 @@
                             <h2 class="fw-bold"> Bolsa Pedigree- Perro mayor.</h2>
                             <p class="fs-6 fw-light">PEDIGREE</p>
                             <h2 class="fw-bold py-2">$20.00</h2>
-                            <p class="fs-5 fw-semibold">Descripción</p>
-                            <p class="fs-5">Bolsa de comida de 6 libras, pedigree nutre el corazón y el cerebro de
+                            <p class="fs-5 fw-semibold mb-2">Descripción</p>
+                            <p class="fs-6">Bolsa de comida de 6 libras, pedigree nutre el corazón y el cerebro de
                                 nuestros preciosos, para que lo alimentes como se lo merece.</p>
-                            <a href="../public/productos_perros_comida.html"
-                                class="btn btn-orange-color text-light me-md-5">Alimentación</a>
+                            <div class="bg-orange-color text-light col-12 col-md-2 text-center rounded-3 p-1">
+                                Alimentación</div>
                         </div>
                         <div class="col-lg-2 col-sm-0 col-md-0"></div>
                         <div class="col-lg-2 col-sm-0 col-md-0"></div>
                         <div class="col-lg-2 col-sm-0 col-md-0"></div>
                         <div class="col-lg-1 col-sm-0 col-md-0"></div>
-                        <div class="col-sm-12 col-md-4 col-lg-2 align-items-end">
-                            <div class="contador d-flex justify-content-between rounded-5 shadow mb-3">
-                                <button class="btn mas text-red-color fw-bolder" onclick="restar()">-</button>
-                                <input type="number" value="1" id="cantidad" min="1"
-                                    class="form-control text-center sin-barra bg-white">
-                                <button class="btn menos text-red-color fw-bolder" onclick="sumar()">+</button>
+                        <div class="row d-flex align-items-center justify-content-end gy-2">
+                            <div class="col-sm-12 col-md-4 col-lg-2 align-items-end">
+                                <div class="contador d-flex justify-content-between rounded-5 shadow">
+                                    <button class="btn mas text-red-color fw-bolder" onclick="restar()">-</button>
+                                    <input type="number" value="1" id="cantidad" min="1"
+                                        class="form-control text-center sin-barra bg-white">
+                                    <button class="btn menos text-red-color fw-bolder" onclick="sumar()">+</button>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-8 col-lg-3 px-2 align-items-start ">
+                                <a href="../public/carrito_1.html"
+                                    class="btn btn-orange-color text-light me-md-5 d-flex align-items-center py-2 btn-small rounded-3">
+                                    <div class="col-auto d-none d-sm-block">
+                                        <img src="../../resources/img/svg/carro_redondo.svg" width="40px">
+                                    </div>
+                                    <div class="col-auto">
+                                        Añadir al carrito
+                                    </div>
+                                </a>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-8 col-lg-3 px-2 align-items-start ">
-                            <a href="../public/carrito_1.html"
-                                class="btn btn-orange-color text-light me-md-5 font-smallest d-flex align-items-center py-2">
-                                <div class="col-auto d-none d-sm-block">
-                                    <img src="../../resources/img/png/carro_redondo.png" class="img-fluid"
-                                        style="min-height: 40px;"> <!-- Ajusta el tamaño máximo del icono -->
-                                </div>
-                                <div class="col-auto">
-                                    Añadir al carrito
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-12 col-md-8 col-lg-12">
+                        <div class="col-sm-12 col-md-8 col-lg-12 mt-3">
                             <div class="row align-items-center">
                                 <!-- Agrega la clase align-items-center para alinear verticalmente -->
                                 <div class="col-1 text-end d-none d-sm-block">
@@ -91,7 +92,7 @@
                                     <!-- Ajusta el tamaño máximo del icono -->
                                 </div>
                                 <div class="col-11 text-start">
-                                    <p class="font-smallest fw-semibold">
+                                    <p class="font-smallest fw-semibold mb-0">
                                         ¿Tienes un cupón de descuento?
                                     </p>
                                     <span class="fst-normal text-black">Podrás añadirlo en la parte de abajo</span>
@@ -99,18 +100,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 py-5">
+                        <div class="col-12 py-3 ">
                             <div class="row align-items-start">
                                 <div class="col-lg-7 col-md-7 col-sm-7">
                                     <div class="mb-3">
                                         <input type="text" id="nombre_cliente" name="nonmbreCliente"
                                             placeholder="Escribe el código de tu cupón"
-                                            class="form-control form-control-lg shadow rounded-3 bg-white">
+                                            class="form-control  shadow rounded-3 bg-white">
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-5 col-sm-5 text-start d-flex">
-                                    <img src="../../resources/img/png/enviar_codigo.png" class="img-fluid" style="max-width: 35px;">
-                                    <!-- Ajusta el tamaño máximo del icono -->
+                                    <a href="">
+                                        <img src="../../resources/img/png/enviar_codigo.png" class="img-fluid"
+                                            style="max-width: 35px;">
+                                        <!-- Ajusta el tamaño máximo del icono -->
+                                    </a>
                                 </div>
                             </div>
                         </div>
