--- a/system_huellitas/views/public/productos_gatos_cuidados.html
+++ b/system_huellitas/views/public/productos_gatos_cuidados.html
@@ -18,24 +18,21 @@
 <body>
     <header>
         <nav id="navbar"></nav>
-    </header>
-
-    <main class="mt-5 p-5">
-        <div class="container-fluid bg-orange-cream-color text-white">
-            <br>
-            <div class="row">
-                <div class="col-1 px-5 text-end">
+        <div class="container-fluid bg-orange-cream-color text-white mt-5 p-3">
+            <div class="row mt-5 ms-5 mb-3">
+                <div class="col-auto">
                     <img src="../../resources/img/png/cat_products.png" width="90px">
                 </div>
-                <div class="col-11">
+                <div class="col-auto">
                     <h1 class="p-3 text-start">
                         Gatos
                     </h1>
                 </div>
             </div>
-            <br>
         </div>
-        <br>
+    </header>
+
+    <main class="mt-0 p-5">
         <div class="row">
             <div class="col-lg-4 col-sm-12 col-md-12">
                 <div class="row">
@@ -96,10 +93,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -108,7 +105,7 @@
                                 </div>
                             </div>
                             <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <p class="fw-bold">Bolsa Pedigree - Perro mayor</p>
                             <div class="row">
                                 <div class="col-9">
                                     <div class="text-start">
@@ -133,10 +130,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$50</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -170,10 +167,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -207,10 +204,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -219,7 +216,7 @@
                                 </div>
                             </div>
                             <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <p class="fw-bold">Bolsa Pedigree - Perro mayor</p>
                             <div class="row">
                                 <div class="col-9">
                                     <div class="text-start">
@@ -244,10 +241,10 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-6">
                                     <h5 class="card-title fw-bold">$15</h5>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-6">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
                                     <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
@@ -256,7 +253,7 @@
                                 </div>
                             </div>
                             <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
+                            <p class="fw-bold">Bolsa Pedigree - Perro mayor</p>
                             <div class="row">
                                 <div class="col-9">
                                     <div class="text-start">
