--- a/system_huellitas/views/public/actualizar_contra.html
+++ b/system_huellitas/views/public/actualizar_contra.html
@@ -35,7 +35,7 @@
                         <input type="password" id="contrasenia_nueva" name="contraseniaActual" class="form-control form-control-lg shadow rounded-4 bg-white">
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4" href="">Actualizar</a>
+                        <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4" href="../../views/public/perfil.html">Actualizar</a>
                         <p class="fw-semibold">Guarda tu contraseña en algun lugar seguro</p>
                     </div>
                 </form>
