--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -64,9 +64,11 @@
                         <a href="../../views/public/perfil_editar.html"><button type="button"
                                 class="btn btn-orange-color text-white"><img class="img_btn_perfil"
                                     src="../../resources/img/png/editar_btn_perfil.png" alt=""> Editar</button></a>
-                        <button type="button" class="btn btn-red-color text-white"><img class="img_btn_perfil"
+                        <a href="../../views/public/actualizar_contra.html">
+                            <button type="button" class="btn btn-red-color text-white"><img class="img_btn_perfil"
                                 src="../../resources/img/png/actualizar_contrasenia_btn_img.png" alt=""> Actualizar
                             Contraseña</button>
+                        </a>
                         <br>
                     </div>
                 </div>
