Formato de codigo

--- a/system_huellitas/views/public/login.html
+++ b/system_huellitas/views/public/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/public/static_components/menu_public.css">
 </head>
+
 <body>
     <header>
         <nav id="navbar"></nav>
@@ -43,16 +45,16 @@
                                 <label for="password_cliente_login" class="form-label fw-bold">Contraseña</label>
                                 <input type="password" id="password_cliente_login" name="passwordClienteLogin"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white">
-                                    <div class="olvidaste_contrasenia">
-                                        <a class="text-decoration-none text-dark fw-semibold"
-                                            href="../public/recuperacion_contra_1.html"> ¿Olvidaste tu contraseña?</a>
-                                    </div>
+                                <div class="olvidaste_contrasenia">
+                                    <a class="text-decoration-none text-dark fw-semibold"
+                                        href="../public/recuperacion_contra_1.html"> ¿Olvidaste tu contraseña?</a>
+                                </div>
                             </div>
                         </div>
                         <!-- Boton y texto -->
                         <div class="text-center mt-5">
-                            <a
-                                class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white" href="index.html">Iniciar sesión</a>
+                            <a class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white"
+                                href="index.html">Iniciar sesión</a>
                             <div>
                                 ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-semibold"
                                     href="../public/registro.html"> Registrate</a>
@@ -67,10 +69,11 @@
 
     <!-- Agregamos nuestro footer a la pantalla -->
     <footer id="footer"></footer>
-    
+
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/public.js"></script>
 </body>
+
 </html>
