--- a/system_huellitas/views/public/actualizar_contra.html
+++ b/system_huellitas/views/public/actualizar_contra.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/public/static_components/menu_public.css">
 </head>
+
 <body>
     <header>
         <nav id="navbar"></nav>
@@ -28,14 +30,17 @@
                 <form action="" id="recuperacion_contrasenia" class="mt-5 p-4">
                     <div class="mb-5">
                         <label for="contrasenia_actual" class="form-label fw-semibold">Contraseña actual</label>
-                        <input type="password" id="contrasenia_actual" name="contraseniaActual" class="form-control form-control-lg shadow rounded-4 bg-white">
+                        <input type="password" id="contrasenia_actual" name="contraseniaActual"
+                            class="form-control form-control-lg shadow rounded-4 bg-white">
                     </div>
                     <div class="mb-5">
                         <label for="contrasenia_nueva" class="form-label fw-semibold">Nueva contraseña</label>
-                        <input type="password" id="contrasenia_nueva" name="contraseniaActual" class="form-control form-control-lg shadow rounded-4 bg-white">
+                        <input type="password" id="contrasenia_nueva" name="contraseniaActual"
+                            class="form-control form-control-lg shadow rounded-4 bg-white">
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4" href="../../views/public/perfil.html">Actualizar</a>
+                        <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4"
+                            href="../../views/public/perfil.html">Actualizar</a>
                         <p class="fw-semibold">Guarda tu contraseña en algun lugar seguro</p>
                     </div>
                 </form>
@@ -43,12 +48,13 @@
         </div>
     </main>
 
-     <!-- Agregamos nuestro footer a la pantalla -->
+    <!-- Agregamos nuestro footer a la pantalla -->
     <footer id="footer"></footer>
 
-     <!-- Agregamos el framework de boostrap - js -->
-     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-     <!-- Agregamos la ruta para agregar el menu -->
-     <script src="../../controllers/utils/public.js"></script>
+    <!-- Agregamos el framework de boostrap - js -->
+    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la ruta para agregar el menu -->
+    <script src="../../controllers/utils/public.js"></script>
 </body>
+
 </html>
