--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -110,7 +110,8 @@
                 </div>
             </div>
             <div class="d-flex justify-content-start mt-4 mb-5">
-                <a href="../../views/public/productos_perros_comida.html"><img src="../../resources/img/png/row.png"></a>
+                <a href="../../views/public/productos_perros_comida.html"><img
+                        src="../../resources/img/png/row.png"></a>
                 <p class="ms-3 mt-1">Seguir comprando</p>
             </div>
         </div>
