--- a/system_huellitas/views/public/sobre_nosotros.html
+++ b/system_huellitas/views/public/sobre_nosotros.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <!-- Encabezado -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros</title>
@@ -16,18 +17,23 @@
 
 <body>
     <header>
-        <nav id="navbar"></nav>
+        <nav id="navbar"></nav> <!-- Aquí se ubicará el menú -->
     </header>
 
     <main>
+        <!-- Sección principal -->
+        <!-- Encabezado de la sección principal -->
         <div class="bg-orange-cream-color text-white mt-5 p-5 d-flex align-items-center justify-content-center">
             <h1 class="mt-4">
                 Sobre Nosotros
             </h1>
         </div>
 
+        <!-- Contenido de la página -->
         <div class="mt-3 p-5">
             <div class="container">
+                <!-- Contenido sobre la empresa -->
+                <!-- Introducción -->
                 <h3 class="text-center mb-3">¡Bienvenido a Huellitas Pet's! 🐾</h3>
                 <p class="text-justify">
                     Somos más que una tienda en línea; somos amantes apasionados de los perros y gatos que
@@ -36,6 +42,7 @@
                     para satisfacer todas las necesidades de tus queridos compañeros caninos y felinos.
                 </p>
                 <br>
+                <!-- Nuestra Pasión -->
                 <h3 class="text-center mb-3">
                     Nuestra Pasión
                 </h3>
@@ -45,6 +52,7 @@
                     productos de alta calidad que promueven la salud, el bienestar y la felicidad de tus amigos peludos.
                 </p>
                 <br>
+                <!-- Variedad de Productos -->
                 <h3 class="text-center mb-3">
                     Variedad de Productos
                 </h3>
@@ -59,6 +67,7 @@
             </div>
         </div>
 
+        <!-- Sección de Visión, Misión y Valores -->
         <div class="container-fluid text-center bg-orange-cream-color pt-5">
             <div class="row">
                 <div class=" col-7 col-sm-3 container">
@@ -99,8 +108,10 @@
             </div>
         </div>
 
+        <!-- Sección final -->
         <div class="mt-3 p-5">
             <div class="container text-center">
+                <!-- Conclusión -->
                 <h3>¡Conócenos Más!</h3>
                 <br>
                 <p class="text-justify">
