--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -110,7 +110,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-5 col-sm-5 text-start d-flex">
-                                    <a href="">
+                                    <a href="../../views/public/carrito_1.html">
                                         <img src="../../resources/img/png/enviar_codigo.png" class="img-fluid"
                                             style="max-width: 35px;">
                                         <!-- Ajusta el tamaño máximo del icono -->
