--- a/system_huellitas/views/public/productos_gatos_comida.html
+++ b/system_huellitas/views/public/productos_gatos_comida.html
@@ -109,13 +109,15 @@
                             <div class="row">
                                 <div class="col-9">
                                     <div class="text-start">
-                                        <button type="button" class="btn btn-orange-color text-white .fs-6 text"
-                                            id="Ver_producto_perros">Ver producto</button>
+                                        <a href="../../views/public/producto.html" class="btn btn-orange-color text-white .fs-6 text"
+                                            id="Ver_producto_perros">Ver producto</a>
                                     </div>
                                 </div>
                                 <div class="col-3">
                                     <div class="container text-end">
-                                        <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                        <a href="../../views/public/carrito_1.html">
+                                            <img src="../../resources/img/png/carrito_naranja.png" width="30px">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
