Verificación de ortografia de mi parte

--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -34,7 +34,6 @@
                             <!-- Utiliza text-start para alinear el texto a la izquierda -->
                             <a class="opacity-100" href="../public/productos_perros_comida.html"
                                 id="productoEspecifico">
-                                <!-- No es necesario un div adicional aquí -->
                                 <p class="p-0 m-0 text-black font-smallest">
                                     Regresar a los productos
                                 </p>
@@ -49,6 +48,7 @@
                             <img class="perro image-fluid rounded-3" src="../../resources/img/png/product1.png" alt="">
                         </div>
                         <div class="div-sm-12 col-md-12 col-lg-9 py-3">
+                            <!--Aqui esta la información del producto, nombre, marca, precio, descripcion, sección-->
                             <h2 class="fw-bold"> Bolsa Pedigree- Perro mayor.</h2>
                             <p class="fs-6 fw-light">PEDIGREE</p>
                             <h2 class="fw-bold py-2">$20.00</h2>
@@ -58,10 +58,12 @@
                             <div class="bg-orange-color text-light col-12 col-md-2 text-center rounded-3 p-1">
                                 Alimentación</div>
                         </div>
+                        <!--Aqui estan los divs para ajustar el contenido y que siempre permanezaca con 7 espacios a la derecha en lg-->
                         <div class="col-lg-2 col-sm-0 col-md-0"></div>
                         <div class="col-lg-2 col-sm-0 col-md-0"></div>
                         <div class="col-lg-2 col-sm-0 col-md-0"></div>
                         <div class="col-lg-1 col-sm-0 col-md-0"></div>
+                        <!--Aqui va la cantidad de unidades que comprará de este producto-->
                         <div class="row d-flex align-items-center justify-content-end gy-2">
                             <div class="col-sm-12 col-md-4 col-lg-2 align-items-end">
                                 <div class="contador d-flex justify-content-between rounded-5 shadow">
@@ -71,6 +73,7 @@
                                     <button class="btn menos text-red-color fw-bolder" onclick="sumar()">+</button>
                                 </div>
                             </div>
+                            <!--Boton para añadir el producto al carrito-->
                             <div class="col-sm-12 col-md-8 col-lg-3 px-2 align-items-start ">
                                 <a href="../public/carrito_1.html"
                                     class="btn btn-orange-color text-light me-md-5 d-flex align-items-center py-2 btn-small rounded-3">
