--- a/system_huellitas/views/public/productos_perros_comida.html
+++ b/system_huellitas/views/public/productos_perros_comida.html
@@ -74,14 +74,14 @@
             <div class="col-lg-4 col-sm-12 col-md-12">
                 <div class="row">
                     <div class="col-12">
-                        <p class="fw-bold">Filtrar por categorias</p>
+                        <p class="fw-bold">Filtrar por categorías</p>
                     </div>
                     <div class="col-12">
                         <div class="dropdown d-grid grap-2 " id="DropDown_ModificarPed" name="DropDown_ModificarPedN">
                             <button class="btn bg-white dropdown-toggle shadow rounded-5 text-start" type="button"
                                 id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                <span id="CategoriaS">Elige una categoria</span>
+                                <span id="CategoriaS">Elige una categoría</span>
                             </button>
 
                             <!-- Opciones del dropdown -->
